Fixed athletics so it wasn't overlapping image as much

--- a/scss/landing-page.scss
+++ b/scss/landing-page.scss
@@ -10,7 +10,7 @@
 	width: 100%;
 	overflow:hidden;
 	background-position: top center;
-	padding-top: 135px;
+	padding-top: 155px;
 	background-size: 200% auto;
 }
 
